# kaios-build-env

./: README.md
kaios_rcs-main/lims/: CMakeLists.txt
kaios_rcs-main/lims/cmake/: COMMON.cmake  RCS.cmake
kaios_rcs-main/lims/include/: EcrioCPMDataTypes.h  EcrioDataTypes.h  EcrioIOTA.h  EcrioIOTA.properties  EcrioMediaDataTypes.h  EcrioPAL.h  EcrioPAL_Common.h  EcrioPAL_Log.h  EcrioPAL_Memory.h  EcrioPAL_Mutex.h  EcrioPAL_QCM.h  EcrioPAL_Socket.h  EcrioPAL_String.h  EcrioPAL_Timer.h  EcrioPAL_Utility.h  EcrioSIPDataTypes.h  EcrioSUEDataTypes.h  EcrioSmsDataTypes.h  EcrioUCEDataTypes.h  lims.h
kaios_rcs-main/lims/main/: CMakeLists.txt
kaios_rcs-main/lims/main/config/: default.ini
kaios_rcs-main/lims/main/debug/: lims_wrapper.asm.js
kaios_rcs-main/lims/main/src/: iota_test.cpp  iota_test.h  iota_test_config.cpp  iota_test_menu.cpp  iota_test_menu.h  iota_test_utility.cpp  lims_wrapper.c  lims_wrapper.h  pal_stub.c
kaios_rcs-main/lims/oom/include/: EcrioOOM.h
kaios_rcs-main/lims/oom/src/: default_oom.c
kaios_rcs-main/lims/pal/linux/: Android.mk  CMakeLists.txt  EcrioPAL.cpp  EcrioPAL_Log.cpp  EcrioPAL_Memory.cpp  EcrioPAL_Mutex.cpp  EcrioPAL_QCM.cpp  EcrioPAL_Socket.cpp  EcrioPAL_String.cpp  EcrioPAL_Timer.cpp  EcrioPAL_Utility.cpp  EcrioPFD_Shared.cpp  EcrioPFD_Shared.h  EcrioPFD_Signal.cpp  EcrioPFD_Signal.h
kaios_rcs-main/lims/pal/stub/: CMakeLists.txt  EcrioPAL.cpp
kaios_rcs-main/lims/pal/test/: CMakeLists.txt  EcrioPAL.cpp  EcrioPAL_Internal.h  EcrioPAL_Log.cpp  EcrioPAL_Memory.cpp  EcrioPAL_Mutex.cpp  EcrioPAL_Socket.cpp  EcrioPAL_String.cpp  EcrioPAL_Timer.cpp  EcrioPAL_Utility.cpp  pal_test.h
kaios_rcs-main/lims/pal/windows/: CMakeLists.txt  EcrioPAL.cpp  EcrioPAL_Internal.h  EcrioPAL_Log.cpp  EcrioPAL_Memory.cpp  EcrioPAL_Mutex.cpp  EcrioPAL_Socket.cpp  EcrioPAL_String.cpp  EcrioPAL_Timer.cpp  EcrioPAL_Utility.cpp
kaios_rcs-main/lims/src/: lims_AbortSession.c  lims_AddParticipantsToGroupChatSession.c  lims_Deinit.c  lims_DeleteGroupChatIcon.c  lims_DeleteGroupChatSubject.c  lims_Deregister.c  lims_EndGroupChatSession.c  lims_EndSession.c  lims_GetACSConfiguration.c  lims_Handler.c  lims_Init.c  lims_NetworkStateChange.c  lims_PublishCapabilities.c  lims_QueryCapabilities.c  lims_Register.c  lims_RemoveCapabilities.c  lims_RemoveParticipantsFromGroupChatSession.c  lims_RespondGroupChatSession.c  lims_RespondSession.c  lims_SendData.c  lims_SendMessage.c  lims_SendPagerMessage.c  lims_SendPrivacyManagementCommands.c  lims_SendRichCard.c  lims_SendSpamReportMessage.c  lims_SetGroupChatHost.c  lims_SetGroupChatIcon.c  lims_SetGroupChatSubject.c  lims_SetNetworkID.c  lims_SetUserAgent.c  lims_StartGroupChatSession.c  lims_StartSession.c  lims_SubscribeToGroupParticipantInfo.c  lims_TriggerACSRequest.c  lims_internal.c  lims_internal.h
kaios_rcs-main/lims/src/cpim/: EcrioCPIM.c  EcrioCPIM.h  EcrioCPIMCommon.h  EcrioCPIMForm.c  EcrioCPIMParse.c  EcrioCPIMParseMessage.c
kaios_rcs-main/lims/src/cpm/: EcrioCPM.h  EcrioCPMAbortSession.c  EcrioCPMAddParticipantsToGroupChatSession.c  EcrioCPMCallback.c  EcrioCPMDeinit.c  EcrioCPMEndGroupChatSession.c  EcrioCPMEndSession.c  EcrioCPMFormIMDN.c  EcrioCPMFormXML.c  EcrioCPMInit.c  EcrioCPMInternal.c  EcrioCPMInternal.h  EcrioCPMModifyGroupChatData.c  EcrioCPMParseMultipartMessage.c  EcrioCPMParseXML.c  EcrioCPMPublishCapabilityInfo.c  EcrioCPMRemoveParticipantsToGroupChatSession.c  EcrioCPMRespondGroupChatSession.c  EcrioCPMRespondSession.c  EcrioCPMSendData.c  EcrioCPMSendMessage.c  EcrioCPMSendPagerMessage.c  EcrioCPMSendRCSChatbotCommand.c  EcrioCPMSetNetworkParam.c  EcrioCPMStartGroupChatSession.c  EcrioCPMStartSession.c  EcrioCPMSubscribeToGroupParticipantInfo.c  EcrioCPMutilities.c
kaios_rcs-main/lims/src/imdn/: EcrioIMDN.c  EcrioIMDN.h  EcrioIMDNCommon.h  EcrioIMDNForm.c  EcrioIMDNParse.c
kaios_rcs-main/lims/src/ims/: EcrioBase64.c  EcrioBase64.h  EcrioCommonEngine.h  EcrioDSCommon.h  EcrioDSList.c  EcrioDSListInterface.h  EcrioDSListInternal.h  EcrioMD5.c  EcrioMD5.h  EcrioSigMgrAuthenticationRspHandler.c  EcrioSigMgrCallControl.c  EcrioSigMgrCallControl.h  EcrioSigMgrCallControlInternal.h  EcrioSigMgrCallControlUAC.c  EcrioSigMgrCallControlUAS.c  EcrioSigMgrCallbacks.c  EcrioSigMgrCallbacks.h  EcrioSigMgrCommon.h  EcrioSigMgrDialogHandler.c  EcrioSigMgrDialogHandler.h  EcrioSigMgrIMSLibHandler.c  EcrioSigMgrIMSLibHandler.h  EcrioSigMgrInit.c  EcrioSigMgrInit.h  EcrioSigMgrInitImpl.c  EcrioSigMgrInstantMessage.c  EcrioSigMgrInstantMessage.h  EcrioSigMgrInstantMessageInternal.h  EcrioSigMgrInstantMessageUAC.c  EcrioSigMgrInstantMessageUAS.c  EcrioSigMgrInternal.h  EcrioSigMgrMD5.h  EcrioSigMgrMacroDefination.h  EcrioSigMgrOptions.c  EcrioSigMgrOptions.h  EcrioSigMgrOptionsInternal.h  EcrioSigMgrOptionsUAC.c  EcrioSigMgrOptionsUAS.c  EcrioSigMgrPublish.c  EcrioSigMgrPublish.h  (+39 more)
kaios_rcs-main/lims/src/ragel/: README
kaios_rcs-main/lims/src/sdp/: EcrioSDP.c  EcrioSDP.h  EcrioSDPForm.c  EcrioSDPInternal.h  EcrioSDPParse.c  EcrioSDPParseHeaderA.c  EcrioSDPParseHeaderA_AMR_parameters.c  EcrioSDPParseHeaderA_DTMF_parameters.c  EcrioSDPParseHeaderA_accept-types.c  EcrioSDPParseHeaderA_file-date.c  EcrioSDPParseHeaderA_file-range.c  EcrioSDPParseHeaderA_file-selector.c  EcrioSDPParseHeaderA_fmtp.c  EcrioSDPParseHeaderA_precond_current.c  EcrioSDPParseHeaderA_precond_desired.c  EcrioSDPParseHeaderA_rtpmap.c  EcrioSDPParseHeaderB.c  EcrioSDPParseHeaderC.c  EcrioSDPParseHeaderM.c  EcrioSDPParseHeaderO.c  EcrioSDPSession.c  EcrioSDPUtility.c
kaios_rcs-main/lims/src/sms/: EcrioSms.h  EcrioSmsCallback.c  EcrioSmsDeInit.c  EcrioSmsInit.c  EcrioSmsInternal.h  EcrioSmsSendMessage.c
kaios_rcs-main/lims/src/sue/: EcrioSUEEngine.h  EcrioSUEExit.c  EcrioSUEExitInternal.c  EcrioSUEHandleIncomingSIPMessage.c  EcrioSUEInit.c  EcrioSUEInterface.h  EcrioSUEInternalDataTypes.h  EcrioSUEInternalFunctions.h  EcrioSUERegister.c  EcrioSUESigMgr.h  EcrioSUESigMgrCallBacks.c  EcrioSUESigMgrCallBacks.h  EcrioSUESigMgrSendRegister.c  EcrioSUESigMgrSetParam.c  EcrioSUEStartInternal.c  EcrioSUEStopInternal.c  EcrioSUEStructRelease.c  (+3 more)
(+27 files in other folders)
